fix extra spacing after phone number

--- a/assets/js/blocks/cart-checkout/checkout/style.scss
+++ b/assets/js/blocks/cart-checkout/checkout/style.scss
@@ -224,6 +224,9 @@
 			.wc-block-components-checkbox {
 				clear: both;
 			}
+			& + .wc-block-components-text-input {
+				margin-top: 1.5em;
+			}
 		}
 	}
 }
